k8s/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: celery

spec:
  replicas: 1

  selector:
    matchLabels:
      app: celery

  template:
    metadata:
      labels:
        app: celery

    spec:
      containers:
      - name: celery

        image: campus_project-web:latest

        imagePullPolicy: Never

        workingDir: /app/campus_ai/campus_ai

        command:
          - celery
        args:
          - -A
          - campus_ai.celery
          - worker
          - --loglevel=info
