k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
      - name: redis
        image: redis:7

        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service

metadata:
  name: redis-service

spec:
  selector:
    app: redis

  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
