k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: smartcampus-web

spec:
  replicas: 2

  selector:
    matchLabels:
      app: smartcampus-web

  template:
    metadata:
      labels:
        app: smartcampus-web

    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      
      containers:
      - name: web
        image: karthikbyri/smart-campus-ai:latest
        imagePullPolicy: Always

        workingDir: /app/campus_ai/campus_ai

        command:
          - gunicorn

        args:
          - --bind
          - 0.0.0.0:8000
          - campus_ai.wsgi:application

        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service

metadata:
  name: smartcampus-web-service

spec:
  selector:
    app: smartcampus-web

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: NodePort
